<resources>
    <string name="app_name">ATAUNI OBS</string>
    <string name="t_c_kimlik_no">T.C. Kimlik No</string>
    <string name="sifre">Şifre</string>
    <string name="girisButonu">GİRİŞ</string>
    <string name="beni_hat_irla">Beni Hatırla</string>
    <string name="sifremi_unuttum">Şifremi Unuttum?</string>
    <string name="kayit_ol">KAYIT OL</string>
    <string name="adiniz">Adınız</string>
    <string name="soyadiniz">Soyadınız</string>
    <string name="btnKayitOl">Kayıt Ol</string>
    <string name="email_adresiniz">Email Adresiniz</string>
    <string name="telNo">Telefon Numaranız</string>
    <string name="onayla">Onayla</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="open">open</string>
    <string name="close">close</string>
</resources>