<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bilgiler_arkaplan_iki"


    tools:context=".SifremiUnuttumActivity">

    <ImageView
        android:id="@+id/sifreResim"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:src="@drawable/universite_logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:visibility="visible"
        >
    </ImageView>

    <Button
        android:id="@+id/sifremiYenile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="50dp"

        android:background="@drawable/buton_arka_plan"
        android:text="@string/onayla"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/editTxtSifreEmail" />

    <EditText
        android:id="@+id/editTxtSifreTc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="80dp"
        android:drawablePadding="8dp"
        android:autofillHints=""
        android:backgroundTint="@color/white"
        android:drawableStart="@drawable/person_icon"
        android:ems="10"
        android:hint="@string/t_c_kimlik_no"
        android:inputType="number"
        android:maxLength="11"
        android:minHeight="48dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintTop_toBottomOf="@id/sifreResim"


        />

    <EditText
        android:id="@+id/editTxtSifreEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="10dp"
        android:hint="@string/email_adresiniz"
        android:drawableStart="@drawable/email_icon"
        android:drawablePadding="8dp"
        android:backgroundTint="@color/white"
        android:textColorHint="@color/white"
        android:paddingStart="10dp"
        android:ems="10"
        android:inputType="textEmailAddress"
        app:layout_constraintTop_toBottomOf="@id/editTxtSifreTc"
        />


</androidx.constraintlayout.widget.ConstraintLayout>